samples/_failures_safe/1761710156_c1d14b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a50ba249.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_a50ba249.c:149:9: error: expected expression at end of input
  149 |         for (int i = 0; i < g->edge_count; i++)
      |         ^~~
./samples/SAFE/__tmp_a50ba249.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a50ba249.c:149:9: error: expected declaration or statement at end of input
